--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div id="content"></div>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/phaser/2.6.4/phaser.js'></script>
-    <script type="text/javascript" src="../dist/phaser-list-view.js"></script>
+    <script type="text/javascript" src="/dist/phaser.min.js"></script>
+    <script type="text/javascript" src="/dist/phaser-list-view.js"></script>
     <script type="text/javascript" src="/example_app.js"></script>
   </body>
 </html>
