demos are working from script tag!

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <base href="/"/>
   </head>
   <body>
-    <div id="content"></div>
-    <script type="text/javascript" src="/dist/phaser.min.js"></script>
-    <script type="text/javascript" src="/dist/phaser-list-view.js"></script>
-    <script type="text/javascript" src="/example_app.js"></script>
+    <div id='select-content'>
+      <select id="selector">
+      </select>
+    </div>
+  	<div id="content">
+    </div>
+    <script type="text/javascript" src="dist/phaser.min.js"></script>
+    <script type="text/javascript" src="dist/phaser-list-view.js"></script>
+    <script type="text/javascript" src="dist/example_app.js"></script>
   </body>
 </html>
