Updated to support event of nested groups and example code. Updated Phaser v2.4.6 to v2.6.2.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     </div>
   	<div id="content">
     </div>
-    <script type="text/javascript" src="dist/phaser.min.js"></script>
+    <!-- <script type="text/javascript" src="dist/phaser.min.js"></script> -->
+    <script type="text/javascript" src="dist/phaser.2.6.2.min.js"></script>
     <script type="text/javascript" src="dist/phaser-list-view.js"></script>
     <script type="text/javascript" src="dist/example_app.js"></script>
   </body>
